--- a/src/app/shared/components/invitation-dialog/invitation-dialog.component.html
+++ b/src/app/shared/components/invitation-dialog/invitation-dialog.component.html
@@ -52,11 +52,11 @@
       <div class="content_row">
         <div class="content_image_wrapper">
           <img
-            *ngIf="invite.topic.imageUrl"
-            [src]="invite.topic.imageUrl"
+            *ngIf="dialogData.imageUrl"
+            [src]="dialogData.imageUrl"
             class="content_image"
           />
-          <div class="no_image" *ngIf="!invite.topic.imageUrl">
+          <div class="no_image" *ngIf="!dialogData.imageUrl">
             <svg
               width="37"
               height="41"
@@ -75,12 +75,9 @@
         </div>
 
         <div class="content_inner">
-          <div class="topic_title" [innerHTML]="invite.topic.title"></div>
+          <div class="topic_title" [innerHTML]="dialogData.title"></div>
 
-          <div
-            class="topic_text"
-            [innerHTML]="invite.topic.intro || invite.topic.description"
-          ></div>
+          <div class="topic_text" [innerHTML]="dialogData.description"></div>
 
           <hr />
 
@@ -89,23 +86,23 @@
             <div class="profile_image_wrap">
               <img
                 class="profile_image"
-                *ngIf="invite.creator.imageUrl"
-                [src]="invite.creator.imageUrl"
+                *ngIf="dialogData.creator.imageUrl"
+                [src]="dialogData.creator.imageUrl"
               />
               <div
                 class="profile_image_filler"
-                *ngIf="!invite.creator.imageUrl"
+                *ngIf="!dialogData.creator.imageUrl"
               >
                 <cos-initials
-                  *ngIf="invite.creator.name"
-                  [name]="invite.creator.name"
+                  *ngIf="dialogData.creator.name"
+                  [name]="dialogData.creator.name"
                   [initialLimit]="1"
                 >
                 </cos-initials>
               </div>
             </div>
 
-            <div class="bold" [innerHTML]="invite.creator.name"></div>
+            <div class="bold" [innerHTML]="dialogData.creator.name"></div>
           </div>
         </div>
       </div>
@@ -120,18 +117,20 @@
           <ul class="content_list content_list_details">
             <li>
               <div translate="MODALS.TOPIC_INVITE_VIEW_LBL_INVITED_BY"></div>
-              <div class="bold">{{ invite.creator.name }}</div>
+              <div class="bold">{{ dialogData.creator.name }}</div>
             </li>
             <li>
               <div
                 translate="MODALS.TOPIC_INVITE_VIEW_LBL_INVITATION_SENT_TO"
               ></div>
-              <div class="bold">{{ invite.user.email }}</div>
+              <div class="bold">{{ dialogData.user.email }}</div>
             </li>
             <li>
               <div translate="MODALS.TOPIC_INVITE_VIEW_LBL_TOPIC_LEVEL"></div>
               <div class="bold">
-                {{ "TXT_TOPIC_LEVELS_" + invite.level | uppercase | translate }}
+                {{
+                  "TXT_TOPIC_LEVELS_" + dialogData.level | uppercase | translate
+                }}
               </div>
             </li>
           </ul>
@@ -193,25 +192,26 @@
         <div class="actions_wrap">
           <button class="btn_medium_submit" [dialog-close]="true">
             <span
-              *ngIf="invite.user.isRegistered && loggedIn()"
+              *ngIf="dialogData.user.isRegistered && loggedIn"
               translate="MODALS.TOPIC_INVITE_VIEW_BTN_JOIN"
             ></span>
             <span
-              *ngIf="invite.user.isRegistered && !loggedIn()"
+              *ngIf="dialogData.user.isRegistered && !loggedIn"
               translate="MODALS.TOPIC_INVITE_VIEW_BTN_GO_TO_LOGIN"
             ></span>
             <span
-              *ngIf="!invite.user.isRegistered"
+              *ngIf="!dialogData.user.isRegistered"
               translate="MODALS.TOPIC_INVITE_VIEW_BTN_COMPLETE_ACCOUNT"
             ></span>
           </button>
           <button
-            *ngIf="invite.topic.visibility === 'public'"
+            *ngIf="dialogData.publicAccess !== null"
             id="group_button"
-            (click)="goToTopic()"
-            translate="COMPONENTS.GROUP_JOIN.BTN_GO_TO_GROUP"
+            (click)="goToPublicUrl(dialogData.publicAccess.link)"
             class="btn_medium_secondary ng-star-inserted"
-          ></button>
+          >
+            {{ dialogData.publicAccess.title | translate }}
+          </button>
         </div>
         <a
           [dialog-close]="false"
