--- a/src/app/shared/components/invitation-dialog/invitation-dialog.component.scss
+++ b/src/app/shared/components/invitation-dialog/invitation-dialog.component.scss
@@ -22,6 +22,16 @@
   width: 100%;
   height: auto;
   object-fit: cover;
+
+  &.group {
+    width: 80px;
+    height: 80px;
+    margin-right: auto;
+    margin-left: 16px;
+    margin-top: 16px;
+    border-radius: 50%;
+    border: 1px solid rgba(225, 231, 238, 1);
+  }
 }
 
 .content_inner {
@@ -91,4 +101,17 @@
 .dialog_footer_join {
   padding: 16px;
   background-color: var(--color-dialog-background);
+}
+
+.into_box {
+  background-color: var(--color-dialog-ideation);
+  display: flex;
+  gap: 16px;
+  border-radius: 8px;
+  align-items: center;
+  padding: 16px;
+
+  svg {
+    flex-shrink: 0;
+  }
 }
