add ideation template

--- a/src/app/ideation/components/ideation-create/ideation-create.component.scss
+++ b/src/app/ideation/components/ideation-create/ideation-create.component.scss
@@ -612,3 +612,15 @@
   position: relative;
   display: inline-block !important;
 }
+
+.template_area {
+  flex-wrap: wrap;
+
+  .template_area_wrap {
+    width: 100%;
+    margin-top: 8px;
+  }
+  .hidden {
+    display: none;
+  }
+}
