fix template limit

--- a/src/app/ideation/components/ideation-create/ideation-create.component.html
+++ b/src/app/ideation/components/ideation-create/ideation-create.component.html
@@ -1875,6 +1875,7 @@
                   >
                     <textarea
                       cosmarkdown
+                      [limit]="0"
                       name="idea_template"
                       id="idea_template"
                       [item]="ideation.template || ''"
