add demograpfic fields ui

--- a/src/app/ideation/components/ideation-create/ideation-create.component.html
+++ b/src/app/ideation/components/ideation-create/ideation-create.component.html
@@ -1762,8 +1762,9 @@
                   class="mobile_show"
                   translate="VIEWS.IDEATION_CREATE.SETTINGS_HEADING_IDEATION_DEADLINE_DESC"
                 ></div>
+
                 <div
-                  class="radio_wrap ideation"
+                  class="radio_wrap anonymous_area ideation"
                   [ngClass]="{
                     disabled:
                       !isnew &&
@@ -1819,6 +1820,7 @@
                     </label>
                   </div>
                 </div>
+
                 <div
                   class="radio_wrap ideation"
                   [ngClass]="{ disabled: ideation.allowAnonymous }"
